--- a/contatti.html
+++ b/contatti.html
@@ -67,19 +67,19 @@
                                 
 
                           <div class="col-md-5">
-      <a href="https://twitter.com/metafisicainsu2"><img src="imgs/twitterpng.png" width="50%"alt="icona twitter"></a>
+      <a href="https://twitter.com/metafisicainsu2"><img src="imgs/twitter.png" alt="icona twitter"></a>
             <svg class="bd-placeholder-img bd-placeholder-img-lg featurette-image img-fluid mx-auto"  width="3500" height="800" xmlns="http://www.w3.org/2000/svg" role="img"><title>Twitter</title> 
 
               <div class="col-md-5">
-                <a href="https://www.facebook.com/Metafisica-In-Suoni-103619858903084"><img src="imgs/facebook.png" width="130%" alt="icona facebook"> </a>
+                <a href="https://www.facebook.com/Metafisica-In-Suoni-103619858903084"><img src="imgs/facebook.png" alt="icona facebook"> </a>
                 <svg class="bd-placeholder-img bd-placeholder-img-lg featurette-image img-fluid mx-auto"  width="3500" height="800" xmlns="http://www.w3.org/2000/svg" role="img"><title>Facebook</title>
 
               <div class="col-md-5">
-              <a href="https://www.instagram.com/metafisicainsuoni/"> <img src="imgs/instagram.jpg" width="310%" alt="icona instagram" align="left"> </a>
+              <a href="https://www.instagram.com/metafisicainsuoni/"> <img src="imgs/instagram.png" alt="icona instagram" align="left"> </a>
                 <svg class="bd-placeholder-img bd-placeholder-img-lg featurette-image img-fluid mx-auto"  width="3500" height="800" xmlns="http://www.w3.org/2000/svg" role="img"><title>Instagram</title>
 
               <div class="col-md-5">
-                <a href="https://open.spotify.com/playlist/78LD3YRJiyO7TR502JS9Ao?si=1140f2ab58df4419"> <img src="imgs/spotify.png" width="800%" alt="icona instagram"></a>
+                <a href="https://open.spotify.com/playlist/78LD3YRJiyO7TR502JS9Ao?si=1140f2ab58df4419"> <img src="imgs/spotify.png" alt="icona instagram"></a>
                 <svg class="bd-placeholder-img bd-placeholder-img-lg featurette-image img-fluid mx-auto"  width="3500" height="800" xmlns="http://www.w3.org/2000/svg" role="img"><title>Spotify</title>
 
 
