--- a/index.html
+++ b/index.html
@@ -43,7 +43,9 @@
    <nav class="navbar navbar-expand-lg navbar-blue py-lg-4" id="mainNav">
             <div class="container">
                 <a class="navbar-brand text-uppercase fw-bold d-lg-none" href="index.html">Start Bootstrap</a>
-               <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
+               <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">Menù<span class="navbar-toggler-icon"></span></button>
+
+
 
           <div class="logo container"> <a href="index.html" class="logo"><img class="ombra" src="imgs/metafisica2.png" width="13%" alt="logohome">
           </a>
